angular-front/k8s/overlays/dev/angular-example-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: angular-example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: eldani.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: angular-example-service
          servicePort: 80
